# simforge

./: .gitignore  .models.py.swp  ESTADO_PROYECTO.md  Proyecto-simforge.txt  README.md  architecture_analysis.md  aromaticity.py  cli.py  conftest.py  flexibility.py  pyproject.toml  requirements.txt  test_cli_ligand.py  test_cli_smoke.py
.antigravitycli/: 96c15312-cbd0-4e58-8b9c-620e1cf3ae26.json
Prot-Memb_FILES/: AperR.f  MoveMemb.f  ScriptCamilo-Jorge.sh  dppc128.gro  dppc512_whole.gro  inflategro-Jorge.pl  ions.mdp  md-memb.mdp  minim.mdp  movie-shrink.f  npt-memb.mdp  run_inflategro.sh  tutorial_membrana.txt
adapters/: __init__.py  base.py  inflategro_adapter.py  movememb_adapter.py  water_deletor_adapter.py
builders/: builder_registry.py  test_match_box_flow.py  test_orient_protein_flow.py  test_workspace_builder.py  test_workspace_selfcontained.py  workspace_builder.py
configs/: WT.yaml  hmg_competition.yaml  lysozyme_test.yaml  membrane_orient_test.yaml  membrane_test.yaml  peptide_A.yaml  test-memb.yaml  test_peptide.yaml
core/: bilayer_geometry.py  compiler.py  compiler_models.py  decision_engine.py  execution_models.py  geometry_advisor.py  inference.py  ligand_workflow_models.py  membrane_geometry.py  membrane_knowledge.py  models.py  ontology.py  orientation_validation.py  parser.py  planning_models.py  project_manager.py  report_generator.py  scientific_planner.py  semantic_artifacts.py  semantic_inference.py  semantic_objectives.py  structural_annotation.py  test_compiler.py  test_decision_engine.py  test_geometry_advisor.py  test_md_knowledge.py  (+8 more)
(+273 files in other folders)
